fixed overflowing message input box

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -36,7 +36,13 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 100vw;
-  min-height: 1.5rem;
+  height: 1.5rem;
+}
+
+.Sidebar-body-header-only {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .Sidebar {
@@ -82,8 +88,7 @@
   overflow: hidden;
   text-align: left;
 }
-
-.not-clickable {
+x .not-clickable {
   pointer-events: none;
 }
 
@@ -120,6 +125,17 @@
   flex: 1;
   background-color: rgb(31, 31, 34);
   border: 0.5px solid rgb(106, 109, 119);
+}
+
+.Body-message {
+  overflow-y: scroll;
+  width: 100%;
+  height: calc(100% - 12.5rem);
+  flex: 1 1 auto;
+}
+
+.Body-content {
+  height: calc(100% - 2.5rem);
 }
 
 .Message {
@@ -183,11 +199,6 @@
   color: whitesmoke;
 }
 
-.Body-message {
-  overflow-y: scroll;
-  height: 62vh;
-}
-
 .Message-date {
   border: 1px solid rgb(106, 109, 119);
   border-radius: 4vh;
@@ -217,26 +228,18 @@
 }
 
 .Message-input-box {
-  position: absolute;
+  position: sticky;
   bottom: 0;
-  right: 0;
+  left: 0;
   display: flex;
-  border: 1px solid rgb(106, 109, 119);
   background-color: rgb(31, 31, 34);
-  border-radius: 1vh;
-  width: 69%;
-  display: flex;
-  align-items: center;
-  margin-bottom: 3rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  padding-left: 3rem;
-  padding-right: 1rem;
+  width: 100%;
+  justify-content: center;
 }
 
 .Message-input {
   height: 7.5rem;
-  width: 90%;
+  width: 80%;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
